--- a/.github/workflows/format-js.yml
+++ b/.github/workflows/format-js.yml
@@ -10,25 +10,25 @@ on:
       - master
 
 jobs:
-  format: 
+  format:
     runs-on: ubuntu-latest
     
     permissions:
       contents:  write
     
-    steps: 
+    steps:  
       - name:  Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets. RELEASE_TOKEN }}
       
-      - name: Setup Node. js
-        uses:  actions/setup-node@v4
-        with:
+      - name:  Setup Node.js
+        uses: actions/setup-node@v4
+        with:  
           node-version: '20'
       
-      - name:  Install Prettier
-        run:  npm install -g prettier
+      - name: Install js-beautify
+        run: npm install -g js-beautify
       
       - name: Format JavaScript files in db directories
         run: |
@@ -36,10 +36,10 @@ jobs:
             !  -path '*/.vscode/*' \
             ! -path '*/_icons/*' \
             ! -name '*.txt' \
-            ! -name '*.md' \
-            ! -name '*.png' \
-            ! -name '*.ico' \
-            ! -name '*.svg' \
+            !  -name '*.md' \
+            !  -name '*.png' \
+            !  -name '*.ico' \
+            !  -name '*.svg' \
             -print0 2>/dev/null | while IFS= read -r -d '' file; do
               # Skip files with beautify ignore comment
               if grep -q 'beautify ignore: start' "$file" 2>/dev/null; then
@@ -49,26 +49,19 @@ jobs:
               
               # Check if file contains JavaScript-like syntax
               if head -c 1000 "$file" 2>/dev/null | grep -qE '(function|var |if\s*\(|for\s*\(|return |includeScript)'; then
-                echo "Formatting: $file"
+                echo "Formatting:  $file"
                 
-                # Check if file ends with newline
-                if [ -s "$file" ] && [ "$(tail -c 1 "$file" | od -An -tx1 | tr -d ' ')" = "0a" ]; then
-                  HAS_NEWLINE=true
-                else
-                  HAS_NEWLINE=false
-                fi
-                
-                # Format with prettier
-                prettier --write "$file" --parser babel || true
-                
-                # Restore original ending if file had no trailing newline
-                if [ "$HAS_NEWLINE" = false ] && [ -s "$file" ]; then
-                  truncate -s -1 "$file" 2>/dev/null || perl -pi -e 'chomp if eof' "$file"
-                fi
+                # Format with js-beautify (preserves line breaks)
+                js-beautify --replace --type js \
+                  --indent-size 4 \
+                  --preserve-newlines \
+                  --max-preserve-newlines 2 \
+                  --end-with-newline \
+                  "$file" || true
               fi
             done
       
-      - name: Check for changes
+      - name:  Check for changes
         id: check_changes
         run:  |
           if git diff --quiet; then
@@ -80,8 +73,8 @@ jobs:
       - name:  Commit and push changes
         if: steps.check_changes. outputs.has_changes == 'true'
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply. github.com"
-          git config --local user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github. com"
+          git config --local user. name "github-actions[bot]"
           git add -A
           git commit -m "style: auto-format JavaScript files in db directories"
           git push
